# checkers

./: .gitignore  .pre-commit-config.yaml  COPYING  Pipfile  README.rst  dodo.py  pyproject.toml  requirements.txt  setup.cfg
Client/: CanvasChecker.py  CanvasField.py  CanvasMove.py  Field.py  __main__.py  canvas_checker.py  canvas_field.py  canvas_move.py  client.py  contracts.txt  main.py
Client/contracts/: Checker.py  Move.py  PossibleMove.py  authorize_command.py  authorize_response.py  checker.py  field_state_command.py  move.py  move_command.py  possible_move.py
Client/contracts/message_examples/: authorize_response.json  field_state.json  field_state_after_black_move.json  move_white.json  test.txt
Client/contracts/value_objects/: checker.py  checker_type.py  possible_move.py
Client/locale/en/LC_MESSAGES/: checkers.po
Client/locale/ru/LC_MESSAGES/: checkers.po
Server/: __main__.py  field_state.py  game.py  server.py
Server/value_objects/: point.py  side_type.py
docs/: README.md  README.rst  conf.py  index.rst  tech.rst
locale/en/LC_MESSAGES/: checkers.po
locale/ru/LC_MESSAGES/: checkers.po
server/: __main__.py  server.py  utils.py
tests/: README.md  __init__.py  test_server_game.py  test_server_utils.py
